--- a/test/dl/new-theme/default.scss
+++ b/test/dl/new-theme/default.scss
@@ -97,9 +97,10 @@ form { padding: 0; margin: 0; }
   .DlButton-inner {
     border: 1px solid;
     @include outset-border2;
-    padding: 2px 4px;
+    padding: 2px 5px;
     div {
-      min-height: 16px; /* XXX: for 16x16 icons; I'm not happy with this solution. */
+      line-height: 16px; /* XXX: for 16x16 icons; I'm not happy with this solution. */
+      min-height: 16px;
     }
   }
 }
@@ -124,15 +125,15 @@ form { padding: 0; margin: 0; }
   @include pressed-border1;
   background-color: $activeBg;
   .DlButton-inner {
-    padding: 3px 3px 1px 5px;
+    padding: 3px 4px 1px 6px;
     @include pressed-border2;
   }
 }
-.DlButton-1 { @include inset-border1; background-color: $mainBgD1; }
+.DlButton-1 { @include inset-border1; background-color: $btnOnBg; }
 .DlButton-1 .DlButton-inner { @include inset-border2; }
 
 .DlAbstractButton-withIcon, .DlButton-withIcon {
-  padding-left: 22px;
+  padding-left: 20px;
   background-repeat: no-repeat !important;
   background-position: 0 50%;
 }
@@ -155,7 +156,7 @@ div.DlButton-Label { display: inline; }
 .DlWidget-disabled.DlCheckbox-0 { color: $disabledColor; background-image: url("img/new-checkradio/check-normal-insensitive.png"); }
 .DlWidget-disabled.DlCheckbox-1 { color: $disabledColor; background-image: url("img/new-checkradio/check-mark-insensitive.png"); }
 
-.DlCheckbox { padding: 2px 5px 2px 20px; -moz-border-radius: 3px; background-position: 4px 50%; background-repeat: no-repeat; }
+.DlCheckbox { padding: 2px 5px 2px 20px; @include border-radius(3px); background-position: 4px 50%; background-repeat: no-repeat; }
 .DlCheckbox-0 { background-image: url("img/new-checkradio/check-normal.png"); }
 .DlCheckbox-1 { background-image: url("img/new-checkradio/check-mark.png"); }
 .DlCheckbox-hover { background-color: $hoverBg; }
@@ -171,7 +172,7 @@ div.DlButton-Label { display: inline; }
 .DlWidget-disabled.DlRadioButton-0 { color: $disabledColor; background-image: url("img/new-checkradio/opt-normal-insensitive.png"); }
 .DlWidget-disabled.DlRadioButton-1 { color: $disabledColor; background-image: url("img/new-checkradio/opt-mark-insensitive.png"); }
 
-.DlRadioButton { padding: 2px 5px 2px 20px; -moz-border-radius: 3px; background-position: 4px 50%; background-repeat: no-repeat; }
+.DlRadioButton { padding: 2px 5px 2px 20px; @include border-radius(3px); background-position: 4px 50%; background-repeat: no-repeat; }
 .DlRadioButton-0 { background-image: url("img/new-checkradio/opt-normal.png"); }
 .DlRadioButton-1 { background-image: url("img/new-checkradio/opt-mark.png"); }
 .DlRadioButton-hover { background-color: $hoverBg; }
@@ -184,7 +185,7 @@ div.DlButton-Label { display: inline; }
 
 .DlPopupMenu {
   .DlRadioButton, .DlCheckbox {
-    -moz-border-radius: 0;
+    @include border-radius(0);
   }
 }
 
@@ -193,7 +194,6 @@ div.DlButton-Label { display: inline; }
 .DlEntry {
   border: 1px solid $mainBgD2;
   .DlEntry-cell {
-    border: 1px solid $mainBgL3;
     background-color: $mainBgL2;
   }
   input, textarea {
@@ -202,7 +202,7 @@ div.DlButton-Label { display: inline; }
     border-width: 0px !important;
     background: $mainBgL3;
     color: #000;
-    padding: 1px 2px 2px 2px !important;
+    padding: 2px 3px !important;
 /*  font-family: "Bitstream Vera Sans Mono",monospace; height: 1.3em; */
     resize: none;
     outline: none;
@@ -216,6 +216,7 @@ div.DlButton-Label { display: inline; }
   @include focus-outline;
   .DlEntry-cell, input, textarea {
     background-color: $focusBg;
+    @include box-shadow(inset 0 0 2px #2c2);
   }
 }
 
@@ -464,7 +465,7 @@ table.DlCalendar {
   z-index: 100;
   left: -30000px;
   top: -30000px;
-  box-shadow: 1px 1px 4px #000;
+  @include box-shadow(1px 1px 4px #000);
 }
 
 .DlPopup-scrollArea {
@@ -630,7 +631,7 @@ div.DlVMenu-separator {
 }
 .DlMacBarIcon { display: inline; }
 .DlMacBarIcon img { vertical-align: middle; padding: 5px; }
-.DlMacBarIcon-1 img { border: 1px solid #769; -moz-border-radius: 15px; padding: 4px; background-color: #edf; }
+.DlMacBarIcon-1 img { border: 1px solid #769; @include border-radius(15px); padding: 4px; background-color: #edf; }
 .DlMacBarIcon-active { opacity: 0.6; /* filter: alpha(opacity=60); /* IE sucks. */ }
 .DlMacHBar div.DlMacHBar-separator {
   overflow: hidden;
@@ -729,14 +730,14 @@ table.DlButtonBox .DlButtonBox-spacer { width: 100%; }
   background-color: $mainBg;
   padding: 1px;
 
-  .DlButton { border: none; background-color: transparent; }
-  .DlButton-inner { border: none; padding: 3px; }
-  .DlButton-hover { border: 1px solid; @include outset-border2; background-color: $hoverBg; }
-  .DlButton-hover .DlButton-inner { padding: 2px; }
-  .DlButton-1 { border: 1px solid; @include inset-border2; background-color: $activeBg; }
-  .DlButton-1 .DlButton-inner { padding: 2px; }
-  .DlButton-active { border: 1px solid; @include inset-border1; background-color: $activeBg; }
-  .DlButton-active .DlButton-inner { padding: 2px; }
+  .DlButton { border: none; background: transparent; }
+  .DlButton-inner { border: none; padding: 3px 4px; }
+  .DlButton-hover { border: 1px solid; @include outset-border2; background: $hoverBg; }
+  .DlButton-hover .DlButton-inner { padding: 2px 3px; }
+  .DlButton-1 { border: 1px solid; @include inset-border2; background: $btnOnBg; }
+  .DlButton-1 .DlButton-inner { padding: 2px 3px; }
+  .DlButton-active { border: 1px solid; @include inset-border1; background: $activeBg; }
+  .DlButton-active .DlButton-inner { padding: 2px 3px; }
   .DlButton-disabled { opacity: 0.7; filter: alpha(opacity=70); }
 
   .DlButtonMenu * { border: none; }
@@ -970,6 +971,10 @@ table.DlButtonBox .DlButtonBox-spacer { width: 100%; }
   z-index: 300;
 }
 
+.DlTopWindowManager {
+  z-index: 500;
+}
+
 /* .DlWM-container { */
 /*   position: relative; */
 /*   width: 0; height: 0; */
@@ -987,14 +992,12 @@ table.DlButtonBox .DlButtonBox-spacer { width: 100%; }
 }
 
 .DlDialog .DlWM-modalStopper {
-  -moz-border-radius: 0 0 4px 4px;
-  -webkit-border-radius: 0 0 4px 4px;
+  @include border-radius(0 0 4px 4px);
 }
 
 .DlDialog .DlDialog-noShadows .DlWM-modalStopper,
 .DlDialog-Maximized .DlWM-modalStopper {
-  -moz-border-radius: 0;
-  -webkit-border-radius: 0;
+  @include border-radius(0);
 }
 
 .DlWM-hasModals { width: 100%; height: 100%; }
