--- a/test/dl/new-theme/default.css
+++ b/test/dl/new-theme/default.css
@@ -132,7 +132,7 @@ form {
   /* @include outline-radius(2px); */
   -moz-box-shadow: 0px 0px 4px #e8a850;
   -webkit-box-shadow: 0px 0px 4px #e8a850;
-  -opera-box-shadow: 0px 0px 4px #e8a850;
+  -o-box-shadow: 0px 0px 4px #e8a850;
   -khtml-box-shadow: 0px 0px 4px #e8a850;
   -ms-box-shadow: 0px 0px 4px #e8a850;
   box-shadow: 0px 0px 4px #e8a850; }
@@ -194,7 +194,7 @@ div.DlButton-Label {
   padding: 2px 5px 2px 20px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
-  -opera-border-radius: 3px;
+  -o-border-radius: 3px;
   -khtml-border-radius: 3px;
   -ms-border-radius: 3px;
   border-radius: 3px;
@@ -244,7 +244,7 @@ div.DlButton-Label {
   padding: 2px 5px 2px 20px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
-  -opera-border-radius: 3px;
+  -o-border-radius: 3px;
   -khtml-border-radius: 3px;
   -ms-border-radius: 3px;
   border-radius: 3px;
@@ -284,7 +284,7 @@ div.DlButton-Label {
 .DlPopupMenu .DlRadioButton, .DlPopupMenu .DlCheckbox {
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
-  -opera-border-radius: 0;
+  -o-border-radius: 0;
   -khtml-border-radius: 0;
   -ms-border-radius: 0;
   border-radius: 0; }
@@ -314,7 +314,7 @@ div.DlButton-Label {
   /* @include outline-radius(2px); */
   -moz-box-shadow: 0px 0px 4px #e8a850;
   -webkit-box-shadow: 0px 0px 4px #e8a850;
-  -opera-box-shadow: 0px 0px 4px #e8a850;
+  -o-box-shadow: 0px 0px 4px #e8a850;
   -khtml-box-shadow: 0px 0px 4px #e8a850;
   -ms-box-shadow: 0px 0px 4px #e8a850;
   box-shadow: 0px 0px 4px #e8a850; }
@@ -322,7 +322,7 @@ div.DlButton-Label {
     background-color: #fff8dd;
     -moz-box-shadow: inset 0 0 2px #22cc22;
     -webkit-box-shadow: inset 0 0 2px #22cc22;
-    -opera-box-shadow: inset 0 0 2px #22cc22;
+    -o-box-shadow: inset 0 0 2px #22cc22;
     -khtml-box-shadow: inset 0 0 2px #22cc22;
     -ms-box-shadow: inset 0 0 2px #22cc22;
     box-shadow: inset 0 0 2px #22cc22; }
@@ -702,7 +702,7 @@ table.DlCalendar {
   top: -30000px;
   -moz-box-shadow: 1px 1px 4px black;
   -webkit-box-shadow: 1px 1px 4px black;
-  -opera-box-shadow: 1px 1px 4px black;
+  -o-box-shadow: 1px 1px 4px black;
   -khtml-box-shadow: 1px 1px 4px black;
   -ms-box-shadow: 1px 1px 4px black;
   box-shadow: 1px 1px 4px black; }
@@ -943,7 +943,7 @@ div.DlVMenu-separator {
   border: 1px solid #769;
   -moz-border-radius: 15px;
   -webkit-border-radius: 15px;
-  -opera-border-radius: 15px;
+  -o-border-radius: 15px;
   -khtml-border-radius: 15px;
   -ms-border-radius: 15px;
   border-radius: 15px;
@@ -1284,7 +1284,7 @@ table.DlButtonBox .DlButtonBox-spacer {
   /* @include outline-radius(2px); */
   -moz-box-shadow: 0px 0px 4px #e8a850;
   -webkit-box-shadow: 0px 0px 4px #e8a850;
-  -opera-box-shadow: 0px 0px 4px #e8a850;
+  -o-box-shadow: 0px 0px 4px #e8a850;
   -khtml-box-shadow: 0px 0px 4px #e8a850;
   -ms-box-shadow: 0px 0px 4px #e8a850;
   box-shadow: 0px 0px 4px #e8a850; }
@@ -1428,7 +1428,7 @@ table.DlButtonBox .DlButtonBox-spacer {
   /* @include outline-radius(2px); */
   -moz-box-shadow: 0px 0px 4px #e8a850;
   -webkit-box-shadow: 0px 0px 4px #e8a850;
-  -opera-box-shadow: 0px 0px 4px #e8a850;
+  -o-box-shadow: 0px 0px 4px #e8a850;
   -khtml-box-shadow: 0px 0px 4px #e8a850;
   -ms-box-shadow: 0px 0px 4px #e8a850;
   box-shadow: 0px 0px 4px #e8a850; }
@@ -1581,7 +1581,7 @@ table.DlButtonBox .DlButtonBox-spacer {
 .DlDialog .DlWM-modalStopper {
   -moz-border-radius: 0 0 4px 4px;
   -webkit-border-radius: 0 0 4px 4px;
-  -opera-border-radius: 0 0 4px 4px;
+  -o-border-radius: 0 0 4px 4px;
   -khtml-border-radius: 0 0 4px 4px;
   -ms-border-radius: 0 0 4px 4px;
   border-radius: 0 0 4px 4px; }
@@ -1590,7 +1590,7 @@ table.DlButtonBox .DlButtonBox-spacer {
 .DlDialog-Maximized .DlWM-modalStopper {
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
-  -opera-border-radius: 0;
+  -o-border-radius: 0;
   -khtml-border-radius: 0;
   -ms-border-radius: 0;
   border-radius: 0; }
@@ -1613,14 +1613,6 @@ table.DlButtonBox .DlButtonBox-spacer {
   position: relative; }
 
 /* .DlDialog>.DlDialog-Rel { position: relative; } /* HACK-IE6 */
-.Shadow {
-  position: absolute;
-  font-size: 1px;
-  line-height: 1px; }
-
-.DlDialog-Rel .Shadow {
-  z-index: 10; }
-
 .DlDialog-WAIT {
   position: absolute;
   top: 0;
@@ -1649,103 +1641,21 @@ table.DlButtonBox .DlButtonBox-spacer {
 .DlDialog { opacity: 0.8; }
 .DlDialog-Active { opacity: 1; }
 */
-.DlDialog-Rel .Shadow-T {
-  left: 18px;
-  right: 15px;
-  top: -14px;
-  background: url("img/shadows/dlg-inactive/T.png") repeat-x 0 0;
-  height: 14px; }
-.DlDialog-Rel .Shadow-B {
-  left: 18px;
-  right: 15px;
-  background: url("img/shadows/dlg-inactive/B.png") repeat-x 0 0;
-  bottom: -16px;
-  height: 16px; }
-.DlDialog-Rel .Shadow-TL {
-  left: -14px;
-  width: 32px;
-  top: -13px;
-  background: url("img/shadows/dlg-inactive/TL.png") no-repeat 0 0;
-  height: 23px; }
-.DlDialog-Rel .Shadow-BR {
-  width: 31px;
-  right: -16px;
-  background: url("img/shadows/dlg-inactive/BR.png") no-repeat 0 0;
-  bottom: -15px;
-  height: 21px; }
-.DlDialog-Rel .Shadow-R {
-  width: 16px;
-  right: -16px;
-  top: 10px;
-  background: url("img/shadows/dlg-inactive/R.png") repeat-y 0 0;
-  bottom: 6px; }
-.DlDialog-Rel .Shadow-TR {
-  width: 31px;
-  right: -16px;
-  top: -13px;
-  background: url("img/shadows/dlg-inactive/TR.png") no-repeat 0 0;
-  height: 23px; }
-.DlDialog-Rel .Shadow-BL {
-  left: -14px;
-  width: 32px;
-  background: url("img/shadows/dlg-inactive/BL.png") no-repeat 0 0;
-  bottom: -15px;
-  height: 21px; }
-.DlDialog-Rel .Shadow-L {
-  left: -14px;
-  width: 14px;
-  top: 10px;
-  background: url("img/shadows/dlg-inactive/L.png") repeat-y 0 0;
-  bottom: 6px; }
+.DlDialog-Rel {
+  -moz-box-shadow: 2px 3px 10px #888888;
+  -webkit-box-shadow: 2px 3px 10px #888888;
+  -o-box-shadow: 2px 3px 10px #888888;
+  -khtml-box-shadow: 2px 3px 10px #888888;
+  -ms-box-shadow: 2px 3px 10px #888888;
+  box-shadow: 2px 3px 10px #888888; }
 
-.DlDialog-Active .DlDialog-Rel .Shadow-T {
-  left: 18px;
-  right: 15px;
-  top: -14px;
-  background: url("img/shadows/dlg-active/T.png") repeat-x 0 0;
-  height: 14px; }
-.DlDialog-Active .DlDialog-Rel .Shadow-B {
-  left: 18px;
-  right: 15px;
-  background: url("img/shadows/dlg-active/B.png") repeat-x 0 0;
-  bottom: -16px;
-  height: 16px; }
-.DlDialog-Active .DlDialog-Rel .Shadow-TL {
-  left: -14px;
-  width: 32px;
-  top: -13px;
-  background: url("img/shadows/dlg-active/TL.png") no-repeat 0 0;
-  height: 23px; }
-.DlDialog-Active .DlDialog-Rel .Shadow-BR {
-  width: 31px;
-  right: -16px;
-  background: url("img/shadows/dlg-active/BR.png") no-repeat 0 0;
-  bottom: -15px;
-  height: 21px; }
-.DlDialog-Active .DlDialog-Rel .Shadow-R {
-  width: 16px;
-  right: -16px;
-  top: 10px;
-  background: url("img/shadows/dlg-active/R.png") repeat-y 0 0;
-  bottom: 6px; }
-.DlDialog-Active .DlDialog-Rel .Shadow-TR {
-  width: 31px;
-  right: -16px;
-  top: -13px;
-  background: url("img/shadows/dlg-active/TR.png") no-repeat 0 0;
-  height: 23px; }
-.DlDialog-Active .DlDialog-Rel .Shadow-BL {
-  left: -14px;
-  width: 32px;
-  background: url("img/shadows/dlg-active/BL.png") no-repeat 0 0;
-  bottom: -15px;
-  height: 21px; }
-.DlDialog-Active .DlDialog-Rel .Shadow-L {
-  left: -14px;
-  width: 14px;
-  top: 10px;
-  background: url("img/shadows/dlg-active/L.png") repeat-y 0 0;
-  bottom: 6px; }
+.DlDialog-Active .DlDialog-Rel {
+  -moz-box-shadow: 2px 3px 20px black;
+  -webkit-box-shadow: 2px 3px 20px black;
+  -o-box-shadow: 2px 3px 20px black;
+  -khtml-box-shadow: 2px 3px 20px black;
+  -ms-box-shadow: 2px 3px 20px black;
+  box-shadow: 2px 3px 20px black; }
 
 /* that's for the crappin' IE6: */
 .DlDialog-noShadows {
@@ -1754,11 +1664,6 @@ table.DlButtonBox .DlButtonBox-spacer {
 .DlDialog-Active .DlDialog-noShadows {
   border-color: #000; }
 
-/*
-.DlDialog-Rel .Shadow-...
-.DlDialog-Active .DlDialog-Rel .Shadow-...
-.DlDialog-Dragging .DlDialog-Rel .Shadow-...
-*/
 .DlDialog-Title {
   opacity: 0.9;
   filter: alpha(opacity=90);
@@ -1769,7 +1674,7 @@ table.DlButtonBox .DlButtonBox-spacer {
   background: #4d7bb3 url("img/titlebg.png") repeat-x 0 50%;
   color: #333;
   padding: 0 10px;
-  border-bottom: 2px solid #9e9e9e; }
+  border-bottom: 1px solid #9e9e9e; }
 
 .DlDialog-Title div {
   padding-top: 3px;
@@ -1856,12 +1761,8 @@ table.DlButtonBox .DlButtonBox-spacer {
   border: none;
   border-bottom: 1px solid #9b9bb8; }
 
-.DlDialog .DlDialog .DlDialog-Rel {
-  outline: 1px solid #fff;
-  -moz-outline: 1px solid #fff;
-  -webkit-outline: 1px solid #fff;
-  -opera-outline: 1px solid #fff;
-  border: 0; }
+.DlDialog .DlDialog-Rel {
+  border: 1px solid #fff; }
 
 .DlDialog-noShadows > .ResizeHandle {
   margin-left: -10px;
@@ -1887,13 +1788,19 @@ table.DlButtonBox .DlButtonBox-spacer {
   color: #3d4; }
 
 /* maximized dialogs are not resizable */
-.DlDialog-Maximized > table > tbody > tr > td > .DlDialog-Rel > .Shadow {
+.DlDialog-Maximized > .DlDialog-Rel {
+  border: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  -o-box-shadow: none;
+  -khtml-box-shadow: none;
+  -ms-box-shadow: none;
+  box-shadow: none; }
+
+.DlDialog-Maximized > .DlDialog-Rel > .ResizeHandle {
   display: none; }
 
-.DlDialog-Maximized > table > tbody > tr > td > .DlDialog-Rel > .ResizeHandle {
-  display: none; }
-
-.DlDialog-Maximized > table > tbody > tr > td > .DlDialog-Rel > .DlDialog-Title {
+.DlDialog-Maximized > .DlDialog-Rel > .DlDialog-Title {
   border-width: 0; }
 
 .DlLiteTree {
@@ -1964,7 +1871,7 @@ table.DlButtonBox .DlButtonBox-spacer {
   /* @include outline-radius(2px); */
   -moz-box-shadow: 0px 0px 4px #e8a850;
   -webkit-box-shadow: 0px 0px 4px #e8a850;
-  -opera-box-shadow: 0px 0px 4px #e8a850;
+  -o-box-shadow: 0px 0px 4px #e8a850;
   -khtml-box-shadow: 0px 0px 4px #e8a850;
   -ms-box-shadow: 0px 0px 4px #e8a850;
   box-shadow: 0px 0px 4px #e8a850; }
@@ -2067,114 +1974,3 @@ span.BreakPoint {
 
 /* this sucks */
 /* thin shadows */
-.ThinShadows .Shadow-T {
-  left: 10px;
-  right: 9px;
-  top: -7px;
-  background: url("img/thin-shadows/T.png") repeat-x 0 0;
-  height: 7px; }
-
-.ThinShadows .Shadow-B {
-  left: 10px;
-  right: 9px;
-  background: url("img/thin-shadows/B.png") repeat-x 0 0;
-  bottom: -11px;
-  height: 11px; }
-
-.ThinShadows .Shadow-TL {
-  left: -7px;
-  width: 17px;
-  top: -7px;
-  background: url("img/thin-shadows/TL.png") no-repeat 0 0;
-  height: 20px; }
-
-.ThinShadows .Shadow-BR {
-  width: 20px;
-  right: -11px;
-  background: url("img/thin-shadows/BR.png") no-repeat 0 0;
-  bottom: -11px;
-  height: 20px; }
-
-.ThinShadows .Shadow-R {
-  width: 11px;
-  right: -11px;
-  top: 13px;
-  background: url("img/thin-shadows/R.png") repeat-y 0 0;
-  bottom: 9px; }
-
-.ThinShadows .Shadow-TR {
-  width: 20px;
-  right: -11px;
-  top: -7px;
-  background: url("img/thin-shadows/TR.png") no-repeat 0 0;
-  height: 20px; }
-
-.ThinShadows .Shadow-BL {
-  left: -7px;
-  width: 17px;
-  background: url("img/thin-shadows/BL.png") no-repeat 0 0;
-  bottom: -11px;
-  height: 20px; }
-
-.ThinShadows .Shadow-L {
-  left: -7px;
-  width: 7px;
-  top: 13px;
-  background: url("img/thin-shadows/L.png") repeat-y 0 0;
-  bottom: 9px; }
-
-.ThinRoundShadows .Shadow-T {
-  left: 8px;
-  right: 6px;
-  top: -6px;
-  background: url("img/thin-shadows1/T.png") repeat-x 0 0;
-  height: 6px; }
-
-.ThinRoundShadows .Shadow-B {
-  left: 8px;
-  right: 6px;
-  background: url("img/thin-shadows1/B.png") repeat-x 0 0;
-  bottom: -10px;
-  height: 10px; }
-
-.ThinRoundShadows .Shadow-TL {
-  left: -6px;
-  width: 14px;
-  top: -6px;
-  background: url("img/thin-shadows1/TL.png") no-repeat 0 0;
-  height: 15px; }
-
-.ThinRoundShadows .Shadow-BR {
-  width: 16px;
-  right: -10px;
-  background: url("img/thin-shadows1/BR.png") no-repeat 0 0;
-  bottom: -10px;
-  height: 16px; }
-
-.ThinRoundShadows .Shadow-R {
-  width: 10px;
-  right: -10px;
-  top: 9px;
-  background: url("img/thin-shadows1/R.png") repeat-y 0 0;
-  bottom: 6px; }
-
-.ThinRoundShadows .Shadow-TR {
-  width: 16px;
-  right: -10px;
-  top: -6px;
-  background: url("img/thin-shadows1/TR.png") no-repeat 0 0;
-  height: 15px; }
-
-.ThinRoundShadows .Shadow-BL {
-  left: -6px;
-  width: 14px;
-  background: url("img/thin-shadows1/BL.png") no-repeat 0 0;
-  bottom: -10px;
-  height: 16px; }
-
-.ThinRoundShadows .Shadow-L {
-  left: -6px;
-  width: 6px;
-  top: 9px;
-  background: url("img/thin-shadows1/L.png") repeat-y 0 0;
-  bottom: 6px; }
